@@ -44,6 +44,7 @@ Moved Panels stylizer UI to CTools. If you use Panels Stylizer, be sure to updat
 Introduce ctools_access_ruleset module for customizable access rulesets.
 Introduce ctools_custom_content module for customizable content panes and move the associated UI code to the module.
 Restore a less aggressive plugin caching.
+#854190 by Amitaibu: Provide a nicer experience with stylizer if there are no stylizer-enabled modules running.
 
 ctools 6.x-1.6 (2010-Jun-1)
 ==============
